--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,7 +5,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #F2ECCC;
     --foreground: #ededed;
   }
 }
@@ -19,4 +14,5 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
